tests/fixtures/invalid/str_gt_none.py
# Cannot compare with > Str and None
x: bool = "hello" > None
